fixed a few more spacings and background colors

--- a/_sass/abstracts/_mixins.scss
+++ b/_sass/abstracts/_mixins.scss
@@ -85,7 +85,7 @@
   @include desktop {
     margin: 32px auto;
     width: 94%;
-    max-width: $std-content-width-max;
+    max-width: $wide-content-width-max;
   }
 }
 
