--- a/_sass/abstracts/_variables.scss
+++ b/_sass/abstracts/_variables.scss
@@ -5,9 +5,11 @@ $max-site-width: 1600px;
 
 /* CONTENT WIDTHS */
 $std-content-width-percent: 94%;
-$std-content-width-max: 1400px;
+$std-content-width-max: 1204px;
 $skinny-content-width-percent: 88%;
 $skinny-content-width-max: 896px;
+
+$wide-content-width-max: 1400px;
 
 /* COLORS */
 $white: #FBFBFB;
